<resources>
    <string name="app_name">TimeTablePlus</string>

    <string name="navigation_open">打开菜单</string>
    <string name="navigation_close">关闭菜单</string>
    <string name="network_error">网络连接出错...</string>
    <string name="processing">正在处理...</string>
    <string name="tip">提示</string>

    <string name="add_lesson_title">添加课程</string>
    <string name="add_lesson_success">已成功添加课程</string>
    <string name="add_lesson_failed">添加课程失败</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="create_lesson">创建课程</string>
    <string name="lesson_information">课程信息</string>
    <string name="name">名称：</string>
    <string name="name_hint">请输入课程名称</string>
    <string name="teacher">老师：</string>
    <string name="teacher_hint">请输入老师名字</string>
    <string name="classroom">教室：</string>
    <string name="classroom_hint">请输入教室位置</string>
    <string name="time">时间：</string>
    <string name="select_time">点击选择</string>
    <string name="class_time_selector">请选择课程时间</string>
    <string name="choose_week">周数：</string>
    <string name="choose_class">节数：</string>
    <string name="choose_dayofweek">时间：</string>
    <string name="chooes_dayofweek_hint">点击选择时间</string>
    <string name="remove_success">删除成功</string>

    <string name="choose_dayofweek_toast">请选择上课时间</string>
    <string name="input_full">请输入完整信息</string>

    <string name="my_timeline">我的圈子</string>
    <string name="lesson_timeline">课程圈子</string>
    <string name="add_timeline">发布</string>
    <string name="create_timeline_hint">这一刻的想法...</string>
    <string name="select_pictures_hint">加几张照片吧...</string>
    <string name="new_timeline_title">新状态</string>
    <string name="mine_location">我的位置</string>
    <string name="choose_location_tip">请选择当前所在位置...</string>
    <string name="mine_lesson_circle">我的圈子</string>
    <string name="choose_lesson_circle_tip">请选择课程圈子...</string>
    <string name="input_content_tip">您还没有输入分享内容...</string>

    <string name="login_user_name">用户名：</string>
    <string name="login_user_name_tip">请输入您的用户名...</string>
    <string name="login_password">密码：</string>
    <string name="login_password_tip">请输入您的密码...</string>
    <string name="register">注册</string>
    <string name="register_tip">还没有账号？赶快注册把~~~</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>

    <string name="current_password">当前密码：</string>
    <string name="current_password_hint">请输入当前的密码...</string>
    <string name="new_password">新密码：</string>
    <string name="new_password_hint">请输入新的密码...</string>
    <string name="register_password">确认密码：</string>
    <string name="register_password_repeat">请再次输入密码...</string>
    <string name="username_password_incorrect">用户名或密码错误...</string>
    <string name="username_no_null">用户名不能为空...</string>
    <string name="password_no_null">密码不能为空...</string>
    <string name="password_repeat_no_same">两次输入的密码不一致...</string>

    <string name="user_center">个人中心</string>
    <string name="user_desc">个性签名</string>
    <string name="upload_portrait">上传头像</string>
    <string name="upload_background">上传背景图片</string>
    <string name="change_password">修改密码</string>
    <string name="save">保存</string>
    <string name="save_finish">已保存</string>
    <string name="logout">退出登录</string>
    <string name="user_desc_hint">我是谁？我在哪里？我要到哪里去？</string>
    <string name="upload_picture_tip">请先选择图片</string>
</resources>
