<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/edit_password_toolbar"
            layout="@layout/include_toolbar" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/large_margin_16dp"
                    android:text="@string/current_password"
                    android:textSize="@dimen/text_size_normal" />

                <com.sx.timetableplus.View.Custom.ClearEditText
                    android:id="@+id/current_password_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/current_password_hint"
                    android:inputType="textPassword"
                    android:paddingRight="@dimen/large_margin_16dp"
                    android:textSize="@dimen/text_size_normal" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/GrayBackground" />

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/large_margin_16dp"
                    android:text="@string/new_password"
                    android:textSize="@dimen/text_size_normal" />

                <com.sx.timetableplus.View.Custom.ClearEditText
                    android:id="@+id/new_password_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/new_password_hint"
                    android:inputType="textPassword"
                    android:paddingRight="@dimen/large_margin_16dp"
                    android:textSize="@dimen/text_size_normal" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/GrayBackground" />

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/large_margin_16dp"
                    android:text="@string/register_password"
                    android:textSize="@dimen/text_size_normal" />

                <com.sx.timetableplus.View.Custom.ClearEditText
                    android:id="@+id/repeat_password_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/register_password_repeat"
                    android:inputType="textPassword"
                    android:paddingRight="@dimen/large_margin_16dp"
                    android:textSize="@dimen/text_size_normal" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mid_margin_8dp"
            android:background="@drawable/drawable_long_button"
            android:text="@string/confirm"
            android:textColor="@color/White"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</layout>
