<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/GrayBackground"
        android:orientation="vertical">

        <include
            android:id="@+id/choose_class_time_toolbar"
            layout="@layout/include_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/min_margin_4dp"
            android:paddingLeft="@dimen/mid_margin_8dp"
            android:paddingRight="@dimen/mid_margin_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/min_margin_4dp"
                android:text="@string/choose_week"
                android:textSize="@dimen/text_size_normal" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/week_range_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:absoluteMaxValue="20"
                app:absoluteMinValue="1"
                app:showLabels="false"
                app:textAboveThumbsColor="@color/colorAccent"
                app:thumbDisabled="@drawable/shapr_range_bar_tumb_disabled"
                app:thumbNormal="@drawable/shape_range_bar_thumb"
                app:thumbPressed="@drawable/shape_range_bar_tumb_pressed" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/GrayBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/min_margin_4dp"
            android:paddingLeft="@dimen/mid_margin_8dp"
            android:paddingRight="@dimen/mid_margin_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/min_margin_4dp"
                android:text="@string/choose_class"
                android:textSize="@dimen/text_size_normal" />

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/class_range_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:absoluteMaxValue="12"
                app:absoluteMinValue="1"
                app:showLabels="false"
                app:textAboveThumbsColor="@color/colorAccent"
                app:thumbDisabled="@drawable/shapr_range_bar_tumb_disabled"
                app:thumbNormal="@drawable/shape_range_bar_thumb"
                app:thumbPressed="@drawable/shape_range_bar_tumb_pressed" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/GrayBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/mid_margin_8dp"
            android:paddingRight="@dimen/mid_margin_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_dayofweek"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/choose_dayofweek_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableRight="@mipmap/ic_right_arrow"
                android:gravity="center"
                android:paddingBottom="@dimen/large_margin_16dp"
                android:paddingTop="@dimen/large_margin_16dp"
                android:text="@string/chooes_dayofweek_hint"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </LinearLayout>
</layout>
